--- a/src/styles/element.scss
+++ b/src/styles/element.scss
@@ -30,7 +30,7 @@
 .card {
   box-sizing: border-box;
   padding: 20px;
-  overflow-x: hidden;
+  //overflow-x: hidden;
   background-color: var(--el-bg-color);
   border: 1px solid var(--el-border-color-light);
   border-radius: 6px;
