--- a/src/views/login/index.scss
+++ b/src/views/login/index.scss
@@ -2,7 +2,7 @@
   height: 100%;
   min-height: 550px;
   background-color: #eeeeee;
-  background-image: url("@/assets/images/login_bg.svg");
+  background-image: url("@/assets/images/login_bg.jpg");
   background-size: 100% 100%;
   background-size: cover;
   .login-box {
@@ -14,7 +14,7 @@
     width: 96.5%;
     height: 94%;
     padding: 0 50px;
-    background-color: rgb(255 255 255 / 80%);
+    //background-color: rgb(255 255 255 / 80%);
     border-radius: 10px;
     .dark {
       position: absolute;
