--- a/src/views/login/index.scss
+++ b/src/views/login/index.scss
@@ -2,7 +2,7 @@
   height: 100%;
   min-height: 550px;
   background-color: #eeeeee;
-  background-image: url("@/assets/images/login_bg.jpg");
+  background-image: url("@/assets/images/login_bg.webp");
   background-size: 100% 100%;
   background-size: cover;
   .login-box {
